[gd_scene load_steps=11 format=3 uid="uid://bt4ib8d0ocwap"]

[ext_resource type="Script" path="res://Control.gd" id="1_gxsrg"]
[ext_resource type="Texture2D" uid="uid://bfyvh3o3eimwd" path="res://art/bg.png" id="1_kxvkd"]
[ext_resource type="Script" path="res://AnimationPlayer.gd" id="3_o35mj"]
[ext_resource type="FontFile" uid="uid://bkhk0aym7pks4" path="res://font/Lemon Days.ttf" id="4_htkk5"]
[ext_resource type="Texture2D" uid="uid://dxsrg23jcpv4v" path="res://art/cursor.png" id="5_saeqj"]
[ext_resource type="Texture2D" uid="uid://bp428d2l8tgno" path="res://art/empty.png" id="6_u8krb"]

[sub_resource type="Animation" id="Animation_rttel"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 800, 800)]
}

[sub_resource type="Animation" id="Animation_i76ti"]
resource_name = "moveBG"
length = 5.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 800, 800), Rect2(530, 530, 800, 800)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_heomu"]
_data = {
"RESET": SubResource("Animation_rttel"),
"moveBG": SubResource("Animation_i76ti")
}

[sub_resource type="AnimatedTexture" id="AnimatedTexture_5c4rt"]
frames = 2
frame_0/texture = ExtResource("5_saeqj")
frame_0/duration = 0.75
frame_1/texture = ExtResource("6_u8krb")
frame_1/duration = 0.25

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(460, 460)
scale = Vector2(1.1475, 1.1475)
texture = ExtResource("1_kxvkd")
region_enabled = true
region_rect = Rect2(0, 0, 800, 800)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_heomu")
}
script = ExtResource("3_o35mj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -220.0
offset_right = -130.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.53555, 2.53555)
script = ExtResource("1_gxsrg")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = -5.91589
offset_top = 64.6803
offset_right = 135.084
offset_bottom = 165.68

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_htkk5")
text = "Start"

[node name="Settings" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_htkk5")
text = "Settings"

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_htkk5")
text = "Quit"

[node name="Title" type="Label" parent="Control"]
layout_mode = 0
offset_left = -21.6915
offset_top = -47.7214
offset_right = 342.308
offset_bottom = 114.279
scale = Vector2(0.394, 0.394)
theme_override_fonts/font = ExtResource("4_htkk5")
theme_override_font_sizes/font_size = 125
text = "SNAKE"

[node name="Title2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 4.7327
offset_top = -3.54952
offset_right = 381.733
offset_bottom = 158.45
scale = Vector2(0.394, 0.394)
theme_override_fonts/font = ExtResource("4_htkk5")
theme_override_font_sizes/font_size = 125
text = "SNACK"

[node name="Cursor" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -32.0
offset_right = -198.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_5c4rt")

[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Start" to="Control" method="_on_start_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Start" to="Control" method="_on_start_pressed"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Settings" to="Control" method="_on_settings_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Settings" to="Control" method="_on_settings_pressed"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/Quit" to="Control" method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Quit" to="Control" method="_on_quit_pressed"]
